objects/evt__Event_Fee__c.object
<CustomObject>
    <customHelpPage>evt__EventManagementHelp</customHelpPage>
    <description>Used to define fees for different types of attendees (e.g. single day attendee, full event attendee, platinum exhibitor...)</description>
    <fields>
        <fullName>evt__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable/disable this fee on the registration landing pages.</description>
        <inlineHelpText>Enable/disable this fee on the registration landing pages.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evt__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>evt__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendee</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evt__Days_Before_or_After__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days to add to the Pay Later Date.  (Use a negative value to set days BEFORE the Pay Later Date)</description>
        <inlineHelpText>Number of days to add to the Pay Later Date.  (Use a negative value to set days BEFORE the Pay Later Date)</inlineHelpText>
        <label>Days Before or After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>evt__Event_Fee_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Fee Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Event Fees</relationshipLabel>
        <relationshipName>Event_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Event__c</fullName>
        <label>Event</label>
        <referenceTo>evt__Special_Event__c</referenceTo>
        <relationshipLabel>Event Fees</relationshipLabel>
        <relationshipName>Event_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>evt__Limit_Per_Purchase__c</fullName>
        <description>Optional limit to the number of registrations that can be completed with this event fee for an individual registrant.  Applies only in scenarios where the registrant is allowed to register multiple attendees.</description>
        <inlineHelpText>Optional limit to the number of registrations that can be completed with this event fee for an individual registrant.  Applies only in scenarios where the registrant is allowed to register multiple attendees.</inlineHelpText>
        <label>Limit Per Purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__Limit__c</fullName>
        <description>Optional limit to the number of registrations that can be completed with this event fee.</description>
        <inlineHelpText>Optional limit to the number of registrations that can be completed with this event fee.</inlineHelpText>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__Members_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags this event fee as a special fee, visible only to logged-in contacts with pymt__Member_Pricing_Enabled__c set to true.</description>
        <inlineHelpText>Flags this event fee as a special fee, visible only to logged-in contacts with pymt__Member_Pricing_Enabled__c set to true.</inlineHelpText>
        <label>Members Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evt__On_Payment_Completed__c</fullName>
        <description>On-payment-completed tag(s) to assign to shopping cart items created when this fee is paid.</description>
        <inlineHelpText>On-payment-completed tag(s) to assign to shopping cart items created when this fee is paid.</inlineHelpText>
        <label>On Payment Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Order__c</fullName>
        <inlineHelpText>Value used to determine the order of event fees when listed on the web.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__Pay_Later_Attendee_Status__c</fullName>
        <description>Invitation Status value to assign new attendee records when the selected fee is a &quot;Pay Later&quot; fee.</description>
        <inlineHelpText>Invitation Status value to assign new attendee records when the selected fee is a &quot;Pay Later&quot; fee.</inlineHelpText>
        <label>Pay Later Attendee Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>evt__Terms__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Pending</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evt__Pay_Later_Description__c</fullName>
        <defaultValue>&quot;Pay By Check&quot;</defaultValue>
        <description>Explanation of pay later option, displayed on the registration landing page (e.g. &quot;Invoice Me&quot; or &quot;Pay At The Door.&quot;</description>
        <inlineHelpText>Explanation of pay later option, displayed on the registration landing page (e.g. &quot;Invoice Me&quot; or &quot;Pay At The Door.&quot;</inlineHelpText>
        <label>Pay Later Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Pay_Later_Options__c</fullName>
        <description>Date or reference date for scheduled payment.</description>
        <inlineHelpText>Date or reference date for scheduled payment.</inlineHelpText>
        <label>Pay Later Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>evt__Terms__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Day of Event</fullName>
                </value>
                <value>
                    <fullName>Day of Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evt__Refund_Policy__c</fullName>
        <label>Refund Policy</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>evt__Terms__c</fullName>
        <description>Controls whether or not the registration page prompts for payment online, or sets up a scheduled payment.</description>
        <inlineHelpText>Controls whether or not the registration page prompts for payment online, or sets up a scheduled payment.</inlineHelpText>
        <label>Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay Online</fullName>
                    <default>true</default>
                    <label>Pay Online</label>
                </value>
                <value>
                    <fullName>Pay Later</fullName>
                </value>
                <value>
                    <fullName>Pay Online or Pay Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Fee</label>
    <nameField>
        <label>Event Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>